<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menu_IMG_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/logo_dodge_drive" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_slow"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow_"
        android:elevation="8dp"
        android:text="@string/menu_BTN_slow"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_size"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_fast"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange_"
        android:elevation="8dp"
        android:text="@string/menu_BTN_fast"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:cornerRadius="20dp"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_sensors"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red_"
        android:elevation="8dp"
        android:text="@string/menu_BTN_sensors"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_size"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:strokeWidth="2dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_scoreboard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/scoreboard_button"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/settings_button"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button_size"
        android:textStyle="bold"/>


</LinearLayout>