<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_4"
                android:text="@string/player_name"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scoreTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_val"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/milesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles_lbl"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/miles_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero_val"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_18" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Bottom divider line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />
</androidx.appcompat.widget.LinearLayoutCompat>
